Bug #21941 close scan before execute yields segv
Submitted: 31 Aug 2006 9:39 Modified: 2 Nov 2006 15:20
Reporter: Jonas Oreland
Status: Closed
Category:Server: NDBAPI Severity:S3 (Non-critical)
Version:4.1, 5.0 OS:
Assigned to: Jonas Oreland Target Version:

[31 Aug 2006 9:39] Jonas Oreland
Description:
 

How to repeat:
 

Suggested fix:
[31 Aug 2006 9:40] Jonas Oreland
example

Attachment: ndbapi_scan.cpp (text/x-c++src), 19.82 KiB.

[15 Sep 2006 16:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12026

ChangeSet@1.2251, 2006-09-15 16:28:38+02:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#21941
    Fix so that scans closed before execute are removed from "scans to send list"
[15 Sep 2006 16:29] Jonas Oreland
Note for patch is for 5.0 (and upward)
4.1 will not fix, as ndbapi is not officially support for it...
[10 Oct 2006 10:39] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13376

ChangeSet@1.2056, 2006-10-10 10:39:03+02:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#21941
    Fix so that scans closed before execute are removed from "scans to send list"
    recommit in mysql-5.1-wl2325-5.0
[10 Oct 2006 20:41] Jonas Oreland
already fixed in 5.1
[12 Oct 2006 18:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13623

ChangeSet@1.2258, 2006-10-12 18:55:22+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - missing if for bug#21941
    note this does not happen in 5.0, but i'm committing it here to keep code same
between 5.0 and 5.1
[13 Oct 2006 9:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13643

ChangeSet@1.2065, 2006-10-13 09:06:00+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - missing if for bug#21941
      note this does not happen in 5.0, but i'm committing it here to keep code same
between 5.0 and 5.1
[13 Oct 2006 10:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13645

ChangeSet@1.2317, 2006-10-13 10:11:18+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - fix memleak (due to incorrect merge of bug#21941)
    recommit into release-clone
[1 Nov 2006 15:45] Jonas Oreland
pushed into 5.0.29
[2 Nov 2006 15:20] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 5.0.29.