ndb - bug#21941   Fix so that scans closed before execute are removed from "scans to send list"